# openmp-toy

./: CMakeLists.txt  README.md  hello.cc  pi.cc  single.cc
